fix the mobile navigation toggle button so that it has a fixed height and width and therefore shows up on iphones

--- a/themes/shanti/sass/layout/_navigation.scss
+++ b/themes/shanti/sass/layout/_navigation.scss
@@ -203,10 +203,10 @@ a {
 }
 
 .menu-toggle {
-	height: 6px;
+	height: 10px;
 	width: 21px;
 	position: absolute;
-	top: 2.5rem;
+	top: 1.8rem;
 	line-height: 0;
 	right: 1rem;
 	background: none;
